<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="radiosales">Sales</string>
    <string name="radioservice">Service</string>
    <string name="app_name">Allen Eaton Auto Rentals</string>
    <string name="sales">Sales</string>
    <string name="service">Service</string>
    <string name="action_settings">Settings</string>
	<string name="login">Login!</string>
	<string name="logout">Logout</string>
	<string name="register">Register!</string>
	<string name="cancel">Cancel</string>
	<string name="email">*Email</string>
	<string name="back">Back</string>
	<string name="password">*Password</string>
	<string name="repassword">*Re-enter Password</string>
	<string name="first_name">*First Name</string>
	<string name="middle_name">Middle Name</string>
	<string name="last_name">*Last Name</string>
	<string name="birthdate">*Birth Date (YYYY-MM-DD)</string>
	<string name="date_format">YYYY-MM-DD</string>
	<string name="address">*Street Address</string>
	<string name="address2">Street Address 2</string>
	<string name="city">*City</string>
	<string name="state">*State</string>
	<string name="zip">*Zip Code</string>
	<string name="phone">Phone Number</string>
	<string name="role">*Role in Company</string>
	<string name="supervisor_email">Supervisor Email</string>
	<string name="submit">Submit</string>
	<string name="view_cars">View Cars</string>
	<string name="print_details">Print Details About Car</string>
	<string name="print_contract">Print Contract</string>
	<string name="checkout_car">Check out a Car</string>
	<string name="checkin_car">Check in a Car</string>
	<string name="checkin">Checkin</string>
	<string name="checkin_date">Checkin Date</string>
	<string name="add_note">Add Service Note</string>
	<string name="note">Note</string>
	<string name="car_plate">Car Plate</string>
	<string name="date">Date</string>
	<string name="cars">Cars</string>
	<string name="users">Users</string>
	<string name="search_car">Search Car</string>
	<string name="search_user">Search User</string>
	<string name="view_users">View Users</string>
	<string name="car_id">Car ID</string>
	<string name="search">Search</string>
	<string name="view_car_details">View Details About Car</string>
	<string name="check_car_use">Check Car in Use</string>
	<string name="view_notes">View Notes</string>
	<string name="view_reservations">View Reservations</string>
	<string name="user_id">Search Users</string>
	<string name="edit_user_info">Edit User Information</string>
	<string name="view_use">View Cars in Use</string>
	<string name="note_number">Car Note Number</string>
	<string name="car_history">Car Service Note</string>
	<string name="add">Add!</string>
	<string name="add_note_success">Service Note Added Successfully!</string>
	<string name="customer_email">Customer Email</string>
	<string name="additional_services">Additional Services</string>
	<string name="gps">GPS</string>
	<string name="ktag">K-Tag</string>
	<string name="roadside">Roadside Assistance</string>
	<string name="damage_insurance">Loss Damage Waiver Insurance</string>
	<string name="accident_insurance">Personal Accident Insurance</string>
	<string name="child_seat">Child Seat</string>
	<string name="reservation_info">Reservation Information</string>
	<string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="car_price">Car Price</string>
	<string name="week">Week</string>
	<string name="day">Day</string>
	<string name="check_out">Check Out</string>
	<string name="next">Next</string>
	<string name="contract">Contract</string>
    <string name="customer_info">Customer Information</string>
    <string name="employee_info">Employee Information</string>
    <string name="car_info">Car Information</string>
    <string name="view_contracts">View Contracts</string>
    <string name="total_price">Total Price:</string>
</resources>
