<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" 
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
     <RelativeLayout
         android:layout_width="346dp"
         android:layout_height="700dp"
         android:layout_gravity="center_vertical" >

      <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal" 
            android:layout_gravity="center_horizontal" >
        
        <EditText
            android:id="@+id/employee_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:imeOptions="actionNext"
            android:hint="@string/email" >
            <requestFocus />     
			</EditText>
	
        <EditText
            android:id="@+id/employee_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" 
            android:imeOptions="actionNext"
            android:hint="@string/password"  >
            </EditText>
            
        <EditText
            android:id="@+id/employee_repassword_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" 
            android:imeOptions="actionNext"
            android:hint="@string/repassword"  >
            </EditText>
			
        <EditText
            android:id="@+id/first_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/first_name" >
            </EditText>
            
        <EditText
            android:id="@+id/middle_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/middle_name" >
        	</EditText>
          
        <EditText
            android:id="@+id/last_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/last_name" >
        	</EditText>

        <EditText
            android:id="@+id/birthdate_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:imeOptions="actionNext"
            android:hint="@string/birthdate" >
            </EditText>
            
        <EditText
            android:id="@+id/address_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/address" >
        	</EditText>
        	
        <EditText
            android:id="@+id/address2_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/address2" >
        	</EditText>
        	
        <EditText
            android:id="@+id/city_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/city" >
        	</EditText>
        	
        <EditText
            android:id="@+id/state_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/state" >
        	</EditText>
        
        <EditText
            android:id="@+id/zip_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:hint="@string/zip" >
            </EditText>
        
        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:hint="@string/phone" >
            </EditText>

        <EditText
            android:id="@+id/employee_role_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/role" >
            </EditText>

        <EditText
            android:id="@+id/supervisor_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:hint="@string/supervisor_email" >
            </EditText>



        <Button
            android:id="@+id/button_register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickButtons"
            android:text="@string/register" />

        <Button
            android:id="@+id/button_register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickButtons"
            android:text="@string/cancel" />
        
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>

</LinearLayout>
