<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".FrontPage" >
  	
	<RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
     <RelativeLayout
         android:layout_width="0dip"
         android:layout_height="fill_parent"
         android:layout_weight="0.7"
         android:gravity="center_vertical" >

         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:orientation="vertical" >

             <TextView
                 android:id="@+id/checkoutcar_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:text="@string/checkout_car"
                 android:textSize="40sp" />

             <TextView
                 android:id="@+id/list_contract_start_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/checkoutcar_title"
                 android:text="@string/additional_services"
                 android:textSize="15sp" />

             <CheckBox
                 android:id="@+id/checkBox_gps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/list_contract_start_date"
                 android:text="@string/gps" />

             <CheckBox
                 android:id="@+id/checkBox_ktag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/list_contract_start_date"
                 android:text="@string/ktag" />

             <CheckBox
                 android:id="@+id/checkBox_roadside"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/list_contract_start_date"
                 android:text="@string/roadside" />

             <CheckBox
                 android:id="@+id/checkBox_damage_insurance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/list_contract_start_date"
                 android:text="@string/damage_insurance" />

             <CheckBox
                 android:id="@+id/checkBox_accident_insurance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/list_contract_start_date"
                 android:text="@string/accident_insurance" />

             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >

                 <TableRow
                     android:id="@+id/tableRow1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <EditText
                         android:id="@+id/child_seat_number"
                         android:layout_width="42dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="number" />

                     <TextView
                         android:id="@+id/contract_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/child_seat"
                         android:textSize="15sp" />
                 </TableRow>
             </TableLayout>

             
             <TextView
                 android:id="@+id/contract_car_make"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/reservation_info"
                 android:textSize="15sp" />

             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >

                 <TableRow
                     android:id="@+id/tableRow2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <TextView
                         android:id="@+id/contract_dinsurance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/start_date"
                         android:textSize="15sp" />

                     <EditText
                         android:id="@+id/start_date_reservation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="date"
                         android:hint="@string/date_format" >
                         <requestFocus />  
                         </EditText>

                 </TableRow>

                 <TableRow
                     android:id="@+id/tableRow3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <TextView
                         android:id="@+id/contract_ainsurance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/end_date"
                         android:textSize="15sp" />

                     <EditText
                         android:id="@+id/end_date_reservation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="date"
                         android:hint="@string/date_format" />


                 </TableRow>

                 <TableRow
                     android:id="@+id/tableRow4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <TextView
                         android:id="@+id/contract_car_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/city"
                         android:textSize="15sp" />

                     <EditText
                         android:id="@+id/city_reservation_field"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:ems="10" />

                 </TableRow>

                 <TableRow
                     android:id="@+id/tableRow5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <TextView
                         android:id="@+id/textView8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/state"
                         android:textSize="15sp" />

                     <EditText
                         android:id="@+id/state_reservation_field"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:ems="10" />

                 </TableRow>

                 <TableRow
                     android:id="@+id/tableRow6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >

                     <TextView
                         android:id="@+id/list_contract_employee_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/car_price"
                         android:textSize="15sp" />

                 </TableRow>

             </TableLayout>
             

         </LinearLayout>

         <Button
             android:id="@+id/check_out_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
             android:onClick="clickButtons"
             android:text="@string/check_out" />

     </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
</LinearLayout>