<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" 
    android:orientation="horizontal">
  	
	<RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
     <RelativeLayout
         android:layout_width="346dp"
         android:layout_height="444dp"
         android:layout_gravity="center_vertical" >

          <TextView
              android:id="@+id/login_login_title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentTop="true"
              android:layout_marginTop="17dp"
              android:gravity="center"
              android:text="@string/login"
              android:textSize="40sp" />

        <RadioGroup
            android:id="@+id/radioEmployeeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp" >

            <RadioButton
                android:id="@+id/radio_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiosales" />

            <RadioButton
                android:id="@+id/radio_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radioservice" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioEmployeeGroup"
            android:layout_marginTop="14dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/input_login_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/input_password_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/button_login_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_register"
            android:layout_alignParentLeft="true"
            android:onClick="clickButtons"
            android:paddingBottom="10dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="clickButtons"
            android:text="@string/register" />
    
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
</LinearLayout>